2009-11-19  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Fixes on printer/driver combo data readout
	  from the SQL database: Option constraint senses were read as
	  boolean type but they are actually strings containing "true" and
	  "false"; For the choices the constraints with the highest score
	  were not correctly selected; Reading of options stopped when
	  the choice list got completely read, so if boolean or numerical
	  options (they have no choices) are in the end of the option
	  list, they got not considered. This broke many Foomatic PPDs,
	  especially the ones for the "eplaser" and "eplaser-jp"
	  drivers. Thanks to Hidenori Ishii from Avasys for finding this.

2009-11-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Do not add "ev/" to IDs of option default
	  values from the MySQL database, we create the default value
	  entries already with "ev/" now to distinguish them from
	  string/password option defaults.

2009-11-06  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for separate comments from the
	  printer entry and from the driver entry in the driver_printer_assoc
	  table.

2009-10-27  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added a "quick overview mode" generating a
	  list of printer entries without driver info to the
	  get_overview_from_sql_db() function. This mode is 10-20 times
	  faster than the full overview taken from the MySQL database.
	  Made the find_printer() function way faster when using a
	  MySQL database and so the server load from driver queries by
	  printer setup tools gets reduced a lot.

2009-10-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Updated the README file for all recent changes and
	  additions in the XML data format of the Foomatic database.

	* lib/Foomatic/DB.pm: Set "*ColorDevice:" in the Foomatic PPD
	  files not only based on whether the printer is a color printer