@@ -2608,8 +2608,7 @@ sub apply_driver_and_pdl_info {
 			die ("Given PPD file not found, neither as $ppddlpath nor as $ppdfile!\n");
 		    }
 		} else {
-		    $ppdfile =~ m:$basedir/(.*)$:;
-		    $ppddlpath = $1;
+		    $ppddlpath = $1 if $ppdfile =~ m:$basedir/(.*)$:;
 		}
 	    } else {
 		if (! -r $ppdfile) {
@@ -2617,9 +2616,16 @@ sub apply_driver_and_pdl_info {
 		}
 		$ppddlpath = $ppdfile;
 	    }
+	    if ($ppddlpath eq "") {
+		my $mk = $dat->{'id'};
+		$mk =~ s/^([^\-]+)\-.*$/$1/;
+		my $ppd = $ppdfile;
+		$ppd =~ s:^.*/([^/]+):$1:;
+		$ppddlpath = "PPD/$mk/$ppd";    
+	    }
 	}
     }
-			      
+
     if ($dat->{'driver'} =~ /Postscript/i) {
 	$pdls = join(',', ($pdls, "POSTSCRIPT$dat->{'ppdpslevel'}"));
     } elsif ($dat->{'driver'} =~ /(pxl|pcl[\s\-]?xl)/i) {
